# monoscopic

./: .eslintrc.js  .gitignore  .prettierrc.json  Cargo.toml  MAINTAINER.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: keep-alive.yml
apps/api/: nodemon.json  package.json
apps/api/src/: cursorStore.ts  server.ts
apps/api/src/routes/: alerts.ts  api-keys.ts
apps/dashboard/: next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/dashboard/app/: globals.css  layout.tsx  not-found.tsx
apps/dashboard/app/(landing)/: layout.tsx  page.tsx
apps/dashboard/components/alerts/: alerts-list.tsx  alerts-summary.tsx  create-alert-modal.tsx
apps/dashboard/components/dashboard/: quick-actions.tsx
apps/dashboard/components/landing/: cta-section.tsx  features-grid.tsx  footer.tsx  hero.tsx  how-it-works.tsx  landing-navbar.tsx  roadmap.tsx  stats-band.tsx  testimonials.tsx  trust-bar.tsx
apps/dashboard/components/layout/: app-layout.tsx  logo.tsx  mobile-header.tsx  mobile-tab-bar.tsx  navbar.tsx  page-transition.tsx
apps/dashboard/components/providers/: index.tsx  theme.tsx
apps/dashboard/components/settings/: about-section.tsx  developer-section.tsx  (+5 more)
apps/dashboard/lib/: utils.ts
apps/docs/: next.config.mjs  package.json
apps/docs/app/: globals.css  layout.tsx  page.mdx
contracts/alert_registry/: Cargo.toml
contracts/alert_registry/src/: lib.rs  test.rs
deployments/: testnet.json
scripts/: capture-fixtures.ts  deploy-testnet.sh  slice.ts  spike-horizon-rate.ts  verify-loop.ts  verify-resume.ts
(+42 files in other folders)
