[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.metadata]
# Rust/Soroban contracts live under contracts/. The JS/TS monorepo (pnpm + turbo)
# is unrelated to this workspace; target/ is git-ignored.

# soroban-env-host 27.0.0 declares `ed25519-dalek = ">=2.0.0"` while passing it a
# rand_chacha 0.3 ChaCha20Rng (rand_core 0.6). Once dalek 3.0.0 shipped, that
# open-ended bound started resolving to a version wanting rand_core 0.10, which
# fails to compile testutils. Cargo.lock pins dalek to 2.2.0 to keep rand_core
# unified at 0.6; see `cargo update -p ed25519-dalek@3.0.0 --precise 2.2.0`.

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
